--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./Vignesh Mathiyalagan.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Vignesh Mathiyalagan</h1>
-            <p>Am Electronics Engineer</p>
+            <img src="Fathima.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>Fathima Firthous J</h1>
+            <p>Computer Science</p>
         </div>
     </header>
 
